// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormRow is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormRow testClass1 testClass2 emotion-euiFormRow-euiTestCss"
  data-test-subj="test subject string"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props describedByIds is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-additional"
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type center is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow-center"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type centerCompressed is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow-centerCompressed"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type columnCompressed is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow-columnCompressed"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type row is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props display type rowCompressed is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props error as array is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-error-0 generated-id-error-1"
      id="generated-id"
    />
    <div
      aria-live="polite"
      class="euiFormErrorText euiFormRow__text emotion-euiFormErrorText"
      id="generated-id-error-0"
    >
      Error
    </div>
    <div
      aria-live="polite"
      class="euiFormErrorText euiFormRow__text emotion-euiFormErrorText"
      id="generated-id-error-1"
    >
      Error2
    </div>
  </div>
</div>
`;

exports[`EuiFormRow props error as string is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-error-0"
      id="generated-id"
    />
    <div
      aria-live="polite"
      class="euiFormErrorText euiFormRow__text emotion-euiFormErrorText"
      id="generated-id-error-0"
    >
      Error
    </div>
  </div>
</div>
`;

exports[`EuiFormRow props error is not rendered if isInvalid is false 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props fullWidth is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow-fullWidth"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props hasEmptyLabelSpace is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--hasEmptyLabelSpace emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiSpacer euiSpacer--m euiFormRow__labelWrapper emotion-euiSpacer-m"
  />
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props helpText is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      aria-describedby="generated-id-help-0"
      id="generated-id"
    />
    <div
      class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
      id="generated-id-help-0"
    >
      <span>
        This is help text.
      </span>
    </div>
  </div>
</div>
`;

exports[`EuiFormRow props id is rendered 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props isDisabled allows a child to still be disabled manually 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      disabled=""
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props isDisabled allows a child's disabled to override 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props isDisabled is passed as disabled to child 1`] = `
<div
  class="euiFormRow emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      disabled=""
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props isInvalid is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      aria-invalid="true"
      class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid emotion-euiFormLabel-invalid"
      for="generated-id"
      id="generated-id-label"
    >
      label
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props label append is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
      for="generated-id"
      id="generated-id-label"
    >
      label
    </label>
     
    append
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props label is rendered 1`] = `
<div
  class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <label
      class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
      for="generated-id"
      id="generated-id-label"
    >
      label
    </label>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</div>
`;

exports[`EuiFormRow props label renders as a legend and subsquently a fieldset wrapper 1`] = `
<fieldset
  class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
  id="generated-id-row"
>
  <div
    class="euiFormRow__labelWrapper"
  >
    <legend
      class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
      id="generated-id-label"
    >
      label
    </legend>
  </div>
  <div
    class="euiFormRow__fieldWrapper"
  >
    <input
      id="generated-id"
    />
  </div>
</fieldset>
`;
